Dialogs, Toasts y Borrar un elemento de la lista
Creamos un Dialog para borrar un elemento de la lista con una pulsación
larga.

--- a/ShoppingApp/app/src/main/res/values-ca/strings.xml
+++ b/ShoppingApp/app/src/main/res/values-ca/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">ShoppingApp</string>
     <string name="action_settings">Configuració</string>
     <string name="title_activity_edit_tienda">Editar Botiga</string>
+    <string name="BorrarTienda">Esborrar Botiga</string>
 </resources>
