--- a/ShoppingApp/app/src/main/res/values-ca/strings.xml
+++ b/ShoppingApp/app/src/main/res/values-ca/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Configuració</string>
     <string name="title_activity_edit_tienda">Editar Botiga</string>
     <string name="BorrarTienda">Esborrar Botiga</string>
+    <string name="menu_backup_now_button_text">Fer respaldament</string>
 </resources>
