--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -16,5 +16,9 @@
 
     <string name="list_fragment_delete_ok_message">La Tienda se ha borrado correctamente</string>
 
+    <string name="menu_backup_now_button_text">Backup Now</string>
+
+    <string name="backup_menu_cloud">Cloud</string>
+    <string name="backup_menu_sd">SD</string>
 
 </resources>
