Libreria externa Gson, guardar a fichero y shared preferences
Usamos la libreria Gson para guardar un json con las Tiendas. Añadimos
SharedPreferences a TiendaApplication para guardar las preferencias de
la aplicación como el tipo de backup.

--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
 
     <string name="backup_menu_cloud">Cloud</string>
     <string name="backup_menu_sd">SD</string>
+    <string name="weekly_freq">weekly</string>
+    <string name="daily_freq">Daily</string>
+    <string name="cloud_backup_opt">Cloud</string>
+    <string name="sd_backuo_option">SD</string>
 
 </resources>
