Hacer un AsyncTask para gestionar un backup
Creamos un boton en el menu de backup y emulamos un tarea que tarda para
mostrar el progreso en un progressDialog

--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="daily_freq">Daily</string>
     <string name="cloud_backup_opt">Cloud</string>
     <string name="sd_backuo_option">SD</string>
+    <string name="backup_now">Do backup</string>
 
 </resources>
