Usamos SQLite para la capa de persistencia creando un nuevo service

--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="cloud_backup_opt">Cloud</string>
     <string name="sd_backuo_option">SD</string>
     <string name="backup_now">Do backup</string>
+    <string name="BorrarTienda">Borrar tienda</string>
 
 </resources>
