Set location info if this Tienda is around on the Location Broadcast receiver

--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="sd_backuo_option">SD</string>
     <string name="backup_now">Do backup</string>
     <string name="BorrarTienda">Borrar tienda</string>
+    <string name="set_here_as_location">Set Here as location</string>
 
 </resources>
