Añadiendo la Maps activity para mostrar las tiendas
Cuando se va al menu de la barra superior y se apreta en "Show Map" se
muestra el Google Map con la  key que hemos obtenido de una web con
nuestro usuario de google. Despues hemos pintado los markers con
nuestras tiendas al cargar el mapa.

--- a/ShoppingApp/app/src/main/res/values/strings.xml
+++ b/ShoppingApp/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="backup_now">Do backup</string>
     <string name="BorrarTienda">Borrar tienda</string>
     <string name="set_here_as_location">Set Here as location</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="show_map_menu_button">Show Map</string>
 
 </resources>
